--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -75,18 +75,29 @@ jobs:
         if: env.changed == 'true'
         run: pnpm run build
 
+      # ========== 时间戳版本号生成与替换 ==========
       - name: Generate timestamp version
         id: version
         run: |
-          # 生成北京时间的时间戳（格式：20241030153045）
           VERSION=$(TZ=Asia/Shanghai date +"%Y%m%d%H%M%S")
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "生成的版本号: $VERSION"
+          echo "生成的时间戳版本号: $VERSION"
 
-      - name: Update package version
+      - name: Update JSON5 files
         if: env.changed == 'true'
-        id: update_pkg_version
-        run: echo "跳过 package.json 版本更新（按需调整）"
+        run: |
+          # 处理无引号版本 (AIsouler_gkd.json5)
+          sed -E -i "s/(version:)[[:space:]]*[0-9]+/\1${{ steps.version.outputs.version }}/g" dist/AIsouler_gkd.json5
+          
+          # 处理带引号版本 (AIsouler_gkd.version.json5)
+          sed -E -i "s/(\"version\":)[[:space:]]*[0-9]+/\1${{ steps.version.outputs.version }}/g" dist/AIsouler_gkd.version.json5
+          
+          # 验证替换结果
+          echo "==== 版本更新验证 ===="
+          echo "AIsouler_gkd.json5:"
+          grep "version:" dist/AIsouler_gkd.json5
+          echo "AIsouler_gkd.version.json5:"
+          grep "\"version\":" dist/AIsouler_gkd.version.json5
 
       - name: Git commit
         if: env.changed == 'true'
@@ -94,8 +105,8 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add .
-          git commit -m "chore: 自动更新版本号至 ${{ steps.version.outputs.version }}" || echo "无变更可提交"
+          git add dist/AIsouler_gkd*.json5
+          git commit -m "chore: 更新订阅版本至 ${{ steps.version.outputs.version }}" || echo "无变更可提交"
         continue-on-error: true
 
       - name: Git push
