--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -85,21 +85,18 @@ jobs:
       - name: Update JSON5 files
         if: env.changed == 'true'
         run: |
-          # 精准替换 AIsouler_gkd.json5 文件开头的第一个 version: 字段（限定前20行）
-          sed -i -E '1,20 {/version:[[:space:]]*[0-9]+/ {
-              s/(version:)[[:space:]]*[0-9]+/\1'"${{ steps.version.outputs.version }}"'/;
-              :a; n; ba
-          }}' dist/AIsouler_gkd.json5
+          # 替换 AIsouler_gkd.json5 的第一个 version 字段（单行文件）
+          sed -i -E "s/(version:)[0-9]+/\1${{ steps.version.outputs.version }}/" dist/AIsouler_gkd.json5
 
-          # 处理带引号的版本文件（全局替换）
-          sed -E -i "s/(\"version\":)[[:space:]]*[0-9]+/\1${{ steps.version.outputs.version }}/g" dist/AIsouler_gkd.version.json5
+          # 替换 AIsouler_gkd.version.json5 的 version 字段（无引号）
+          sed -i -E "s/(version:)[0-9]+/\1${{ steps.version.outputs.version }}/" dist/AIsouler_gkd.version.json5
 
-          # 验证替换结果
-          echo "==== 版本替换验证 ===="
-          echo "AIsouler_gkd.json5 开头版本号:"
-          head -n 20 dist/AIsouler_gkd.json5 | grep -m1 "version:"
-          echo "AIsouler_gkd.version.json5 版本号:"
-          grep -m1 "\"version\":" dist/AIsouler_gkd.version.json5
+          # 验证结果
+          echo "==== 替换验证 ===="
+          echo "AIsouler_gkd.json5:"
+          grep -oP 'version:\K\d+' dist/AIsouler_gkd.json5 | head -1
+          echo "AIsouler_gkd.version.json5:"
+          grep -oP 'version:\K\d+' dist/AIsouler_gkd.version.json5 | head -1
 
       - name: Git commit
         if: env.changed == 'true'
